fix miss align header

--- a/apps/client/src/app/pages/teacher/teacher-layout/teacher-layout.module.scss
+++ b/apps/client/src/app/pages/teacher/teacher-layout/teacher-layout.module.scss
@@ -2,6 +2,7 @@
 
 .header {
   padding: 1rem 3.5rem;
+  grid-area: header;
 }
 
 .container {
